# swaid-plate-resonance

./: .gitignore  README.md  setup_dependencies.sh
code/: .gitignore  Makefile  setup_dependencies.sh
code/led_driver/: .gitignore  CMakeLists.txt  README.md  platformio.ini  setup_dependencies.sh
code/led_driver/include/: embedded_sal.hpp
code/led_driver/src/: embedded_sal.cpp  leds_pico_v1.ino  leds_pico_v2.ino
code/led_driver/test/: test_pico_led.py
code/resonance_core/: .gitignore  CMakeLists.txt  README.md  setup_dependencies.sh
code/resonance_core/include/: core.hpp
code/resonance_core/src/: core.cpp  global.cpp  main.cpp
code/resonance_sdk/: CMakeLists.txt  README.md  setup_dependencies.sh
code/resonance_sdk/include/: mqdriver_tx.hpp
code/resonance_sdk/src/: mqdriver_tx.cpp  tx_driver.cpp
code/resonance_sdk/test/: test_hi.py  test_tx.py
code/resonance_tuner/: CMakeLists.txt  imgui.ini
code/resonance_tuner/include/gui/: tuner_app.h  tuner_panels.h
code/resonance_tuner/src/: main.cpp
code/resonance_tuner/src/gui/: tuner_app.cpp  tuner_panels.cpp
code/simulator/: CMakeLists.txt  README.md  imgui.ini
code/simulator/sim/transducer_analysis/: sim_results_20260506_202928.json
code/simulator/sim/variable_sweep/: sweep_20260508_201531.json
code/simulator/src/: main.cpp
code/simulator/src/core/: analyzer.cpp  analyzer.h  material.h  physics.cpp  physics.h
code/simulator/src/gui/: application.cpp  panels.h
code/soundcard/: CMakeLists.txt  README.md  imgui.ini  rx_driver.cpp  setup_dependencies.sh
code/soundcard/include/: audio_driver.hpp
code/soundcard/src/: audio_driver.cpp
docs/templates/deliverables/: main.tex  section_01.tex  section_02.tex
docs/templates/deliverables/src/: cover.tex  section_03.tex  section_04.tex
docs/templates/presentation/: .gitignore  pres_template.tex
docs/templates/report/: cover.tex  main.tex  section_02.tex  section_07.tex  section_09.tex  section_11.tex  section_12.tex  section_16.tex  section_17.tex  section_20.tex
docs/templates/report/src/: section_03.tex  section_04.tex  section_05.tex  section_06.tex  section_10.tex  section_13.tex  section_14.tex  section_15.tex  section_18.tex  section_19.tex
src/LEDs Control/: controlador_pc_v2.py
src/LEDs Control/leds_pico_v3/: leds_pico_v3.ino
src/LEDs Control/src/: leds_pico_v3.ino
src/SoundCard/Signal Generator/: gerador  gerador.cpp  gerador_gui  gerador_gui.cpp
src/SoundCard/driver/: README.txt  imgui.ini  main.cpp  makefile  sine_gen
src/SoundCard/driver/json_test/: json_caller.cpp  json_test  trigger_test.json
src/simulator/: .gitignore  chladni.py  imgui.ini  placement_sweep_report.md  setup_dependencies.sh
src/simulator/sim/symbols/: master_symbols_20260511_192054.json
src/simulator/sim/transducer_analysis/: sim_results_20260507_164434.json
src/simulator/sim/variable_sweep/: sweep_20260508_174112.json  sweep_20260508_184630.json
src/simulator/simulator_chladni/: README.md  __init__.py  __main__.py  chladni.py  constants.py  gui.py  physics.py  requirements.txt  run_chladni.sh  sweep.py
src/simulator/src/gui/: application.h  gl_custom_loader.h  panels.cpp
src/soundcard/driver/: README.txt  TESTING.md  imgui.ini  install-dependencies.sh  main.cpp  makefile  octave-workspace  rx_driver  rx_driver.cpp  sine_gen
src/soundcard/driver/json_files/: trigger_test.json
src/soundcard/driver/json_test/: catalogue.json  config_test.json  json_caller.cpp  json_driver_interface.h
src/soundcard/driver/test/: Makefile  rcv.cpp  rcv_app  trans.cpp
src/soundcard/driver/test_files/: run_python.sh  test_hi.py  tx.cpp
src/soundcard/signal_generator_deprecated/: Makefile  README.md  imgui.ini
